<resources>
    <string name="app_name">AppBar</string>
    <string name="opt_settings">Settings</string>
    <string name="opt_notes">Записная книжка</string>
    <string name="txt_hint">Заметка...</string>
    <string name="btn_save">Сохранить</string>
    <string name="opt_tasks">Задачи</string>
    <string name="opt_subscription">Оформить подписку</string>
    <string name="opt_pay">Оплатить</string>
    <string name="task_name">Введите название задачи</string>
    <string name="start_date">Дата начала задачи</string>
    <string name="end_date">Дата окончания задачи</string>
    <string name="add_button">Добавить</string>
    <string name ="user_name">Имя пользователя</string>
    <string name ="user_email">Электронная почта</string>
    <string name ="ok_button">ОК</string>
    <string name ="clear_button">Очистить</string>
    <string name="invitation">Выберите способ оплаты:</string>
    <string name="input_money">Введите сумму</string>
    <string name="bank_card">Банковская карта</string>
    <string name="mobile_phone">Мобильный телефон</string>
    <string name="cash">Наличными по адресу</string>
    <string name="payment_info">Информация о платеже</string>
    <string name="pay_button">Оплатить</string>
</resources>
