<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/opt_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/opt_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_tasks"
        android:orderInCategory="100"
        android:title="@string/opt_tasks"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_open_subscribe"
        android:orderInCategory="100"
        android:title="@string/opt_subscription"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_open_pay"
        android:orderInCategory="100"
        android:title="@string/opt_pay"
        app:showAsAction="never"/>
</menu>