<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/txtTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textCapSentences"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textSize="18sp" />

    <CalendarView
        android:id="@+id/cVstartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textSize="18sp" />

    <CalendarView
        android:id="@+id/cVendDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#8BC34A"
        android:text="@string/add_button"
        android:textSize="18sp" />
    </LinearLayout>